correct overflow for safari

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -94,21 +94,26 @@ mark.purple:hover {
   min-width: 100%;
   text-align: center;
   align-items: center;
+  position: relative;
 }
 
 .profile-pic {
   background-color: $pink;
   border-radius: 50%;
+  overflow: hidden;
+  mask-image: radial-gradient(white, black);
   border: 4px solid #dbdbdb;
   transition: all 0.3s;
-  overflow: hidden;
   padding: auto;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   opacity: 1;
   @media (max-width: 1500px) {
-    width: 20%;
+    width: 25%;
+  }
+  @media (max-width: 950px) {
+    width: 35%;
   }
   @media (max-width: 468px) {
     width: 55%;
